syntax = "proto3";

package auth_service.auth;

option go_package = "github.com/digisata/auth-service/proto/auth;authPb";

message BaseResponse {
    string message = 1 [json_name = "message"];
}

// User
message CreateUserRequest {
    string name = 1 [json_name = "name"];
    int32 role = 2 [json_name = "role"];
    string email = 3 [json_name = "email"];
    string password = 4 [json_name = "password"];
    bool is_active = 5 [json_name = "is_active"];
    string note = 6 [json_name = "note"];
}

message LoginRequest {
    string email = 1 [json_name = "email"];
    string password = 2 [json_name = "password"];
}

message LoginResponse {
    string access_token = 1 [json_name = "access_token"];
    string refresh_token = 2 [json_name = "refresh_token"];
}

message RefreshTokenRequest {
    string access_token = 1 [json_name = "access_token"];
    string refresh_token = 2 [json_name = "refresh_token"];
}

message RefreshTokenResponse {
    string access_token = 1 [json_name = "access_token"];
    string refresh_token = 2 [json_name = "refresh_token"];
}

message GetUserByIDRequest {
    string id = 1 [json_name = "id"];
}

message GetUserByIDResponse {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    string email = 3 [json_name = "email"];
    int32 role = 4 [json_name = "role"];
    bool is_active = 5 [json_name = "is_active"];
    string note = 6 [json_name = "note"];
    int32 created_at = 7 [json_name = "created_at"];
    int32 updated_at = 8 [json_name = "updated_at"];
    int32 deleted_at = 9 [json_name = "deleted_at"];
}

message LogoutRequest {
    string refresh_token = 1 [json_name = "refresh_token"];
}

// Profile
message GetProfileByIDResponse {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    string email = 3 [json_name = "email"];
    int32 created_at = 4 [json_name = "created_at"];
    int32 updated_at = 5 [json_name = "updated_at"];
    int32 deleted_at = 6 [json_name = "deleted_at"];
}